fixed debug dark mode

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 	}
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 	body {
 		background-color: rgb(47, 31, 0);
 		color: grey;
